results/SVCOMP/specgen/log-ExSymExeGetStatic-2024_03_06_21_41_54.txt
class Main {

    //@ requires \typeof(args) == \type(String[]);
    public static void main(String[] args) {
        SNode sn = new SNode();
        SNode sn2 = sn.swap();
    }
}

class SNode {
    int elem;
    SNode next;
    static SNode head; // = new SNode(); //change is here

    //@ ensures \result == \this;
    public SNode swap() {
        if (head != null) {
            assert false;
            System.out.println("head is not null");
        } else {
            System.out.println("head is null");
        }
        return this;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeGetStatic.java:15: error: This backslash token is unknown: \this
    //@ ensures \result == \this;
                           ^
1 error

class Main {

    //@ requires \typeof(args) == \type(String[]);
    public static void main(String[] args) {
        SNode sn = new SNode();
        SNode sn2 = sn.swap();
    }
}

class SNode {
    int elem;
    SNode next;
    static SNode head; // = new SNode(); //change is here

    //@ ensures \result == this;
    public SNode swap() {
        if (head != null) {
            assert false;
            System.out.println("head is not null");
        } else {
            System.out.println("head is null");
        }
        return this;
    }
}
